hasqd/tests/coptest/usr/ab/hsl/neg/fid_hsl_ag_dl.inp
ag download
ag dl self

quit
